Fix button overlap by particle bg issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1465,5 +1465,5 @@ body.offcanvas {
 
 #particle canvas{
   z-index: 2 !important;
-  left: 300px !important;
+  left: 520px !important;
 }
